syntax = "proto3";
package gamepb.mallpb;
option go_package = "qq-farm-bot/proto/mallpb";

// MallService — 商城服务 (点券购买化肥礼包等)
// Ported from other/qq-farm-bot/proto/mallpb.proto

message GetMallListBySlotTypeRequest {
    int32 slot_type = 1;  // 商城类型 (1 = 默认)
}

message GetMallListBySlotTypeResponse {
    repeated bytes goods_list = 1;  // 商品列表 (每个元素是序列化的 MallGoods)
    int64 timestamp = 2;
}

message MallGoods {
    int32 goods_id = 1;
    string name = 2;
    int32 type = 3;
    bytes item_ids = 4;    // 物品ID列表 (序列化数据)
    bytes price = 5;       // 价格 (序列化数据, field=2 为点券价格)
    bool is_free = 6;
    bytes limit = 7;       // 限购信息 (序列化数据)
    bool is_limited = 8;
    string discount = 10;
}

message PurchaseRequest {
    int32 goods_id = 1;
    int32 count = 2;
}

message PurchaseResponse {
    int32 goods_id = 1;
    int32 count = 2;
    bytes reward_info = 3;
    bytes result = 5;
}
