syntax = "proto3";
package gamepb.plantpb;
option go_package = "qq-farm-bot/proto/plantpb";

enum PlantPhase {
    PHASE_UNKNOWN = 0;
    SEED = 1;
    GERMINATION = 2;
    SMALL_LEAVES = 3;
    LARGE_LEAVES = 4;
    BLOOMING = 5;
    MATURE = 6;
    DEAD = 7;
}

message LandInfo {
    int64 id = 1;
    bool unlocked = 2;
    int64 level = 3;
    int64 max_level = 4;
    bool could_unlock = 5;
    bool could_upgrade = 6;
    LandUnlockCondition unlock_condition = 7;
    LandUpgradeCondition upgrade_condition = 8;
    Buff buff = 9;
    PlantInfo plant = 10;
    bool is_shared = 11;
    bool can_share = 12;
    int64 master_land_id = 13;
    repeated int64 slave_land_ids = 14;
    int64 land_size = 15;
    int64 lands_level = 16;

    message Buff {
        int64 plant_yield_bonus = 1;
        int64 planting_time_reduction = 2;
        int64 plant_exp_bonus = 3;
    }
}

message LandUnlockCondition {
    int64 need_level = 1;
    int64 need_gold = 2;
}

message LandUpgradeCondition {
    int64 need_level = 1;
    int64 need_gold = 2;
}

message PlantInfo {
    int64 id = 1;
    string name = 2;
    repeated PlantPhaseInfo phases = 4;
    int64 season = 5;
    int64 dry_num = 6;
    int64 stole_num = 9;
    int64 fruit_id = 10;
    int64 fruit_num = 11;
    repeated int64 weed_owners = 12;
    repeated int64 insect_owners = 13;
    repeated int64 stealers = 14;
    int64 grow_sec = 15;
    bool stealable = 16;
    int64 left_inorc_fert_times = 17;
    int64 left_fruit_num = 18;
    int64 steal_intimacy_level = 19;
    repeated int64 mutant_config_ids = 20;
    bool is_nudged = 21;
}

message PlantPhaseInfo {
    int32 phase = 1;
    int64 begin_time = 2;
    int64 phase_id = 3;
    int64 dry_time = 6;
    int64 weeds_time = 7;
    int64 insect_time = 8;
    map<int64, int64> ferts_used = 9;
    repeated MutantInfo mutants = 10;
}

message MutantInfo {
    int64 mutant_time = 1;
    int64 mutant_config_id = 2;
    int64 weather_id = 3;
}

message OperationLimit {
    int64 id = 1;
    int64 day_times = 2;
    int64 day_times_lt = 3;
    int64 day_share_id = 4;
    int64 day_exp_times = 5;
    int64 day_ex_times_lt = 6;
    int64 day_exp_share_id = 7;
}

message AllLandsRequest { int64 host_gid = 1; }
message AllLandsReply {
    repeated LandInfo lands = 1;
    repeated OperationLimit operation_limits = 2;
}

message HarvestRequest {
    repeated int64 land_ids = 1;
    int64 host_gid = 2;
    bool is_all = 3;
}
message HarvestReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 4;
}

message WaterLandRequest {
    repeated int64 land_ids = 1;
    int64 host_gid = 2;
}
message WaterLandReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
}

message WeedOutRequest {
    repeated int64 land_ids = 1;
    int64 host_gid = 2;
}
message WeedOutReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
}

message InsecticideRequest {
    repeated int64 land_ids = 1;
    int64 host_gid = 2;
}
message InsecticideReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
}

message PlantItem {
    int64 seed_id = 1;
    repeated int64 land_ids = 2;
    bool auto_slave = 3;
}

message PlantRequest {
    map<int64, int64> land_and_seed = 1;
    repeated PlantItem items = 2;
}
message PlantReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
}

message RemovePlantRequest { repeated int64 land_ids = 1; }
message RemovePlantReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
}

message FertilizeRequest {
    repeated int64 land_ids = 1;
    int64 fertilizer_id = 2;
}
message FertilizeReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
    int64 fertilizer = 3;
}

message PutInsectsRequest {
    repeated int64 land_ids = 1;
    int64 host_gid = 2;
}
message PutInsectsReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
}

message PutWeedsRequest {
    repeated int64 land_ids = 1;
    int64 host_gid = 2;
}
message PutWeedsReply {
    repeated LandInfo land = 1;
    repeated OperationLimit operation_limits = 2;
}

message LandsNotify {
    repeated LandInfo lands = 1;
    int64 host_gid = 2;
}
